--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,11 +1,10 @@
-[theme]
-#base="dark"
-primaryColor="#4F8BF9"
-backgroundColor="#0E1117"
-secondaryBackgroundColor="#161A23"
-textColor="#FAFAFA"
-font="sans serif"
-
+# [theme]
+#base = "dark"
+#primaryColor = "#4F8BFF"
+#backgroundColor = "#0B1220"
+#secondaryBackgroundColor = "#121B2E"
+#textColor = "#EAF0FF"
+#font = "sans serif"
 [server]
 headless=true
 port=8501
